--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -17,7 +17,10 @@
     "framer-motion": "^7.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^8.0.5"
+    "react-multi-carousel": "^2.8.2",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.4.5",
+    "swiper": "^8.4.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
