--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -12,19 +12,20 @@
     "@chakra-ui/react": "^2.4.3",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@react-oauth/google": "^0.5.1",
     "@sentry/react": "^7.26.0",
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
     "framer-motion": "^7.7.2",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
-
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.5",
-    "react-scripts": "^5.0.1"
-
+    "react-scripts": "^5.0.1",
+    "reactjs-social-login": "^2.6.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
