--- a/Panache-beauty/package.json
+++ b/Panache-beauty/package.json
@@ -19,6 +19,7 @@
     "@sentry/react": "^7.26.0",
     "axios": "^1.2.1",
     "bootstrap": "^5.2.3",
+    "firebase": "^9.16.0",
     "framer-motion": "^7.7.2",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
